# procgen

./: .clang-format  .gitignore  CMakeLists.txt  DUMP.org  DrawingParameters.h  InterpretationMap.cpp  InterpretationMap.h  InterpretationMapBuffer.cpp  InterpretationMapBuffer.h  InterpretationMapView.cpp  InterpretationMapView.h  LSystem.cpp  LSystem.h  LSystemBuffer.cpp  LSystemBuffer.h  LSystemController.cpp  LSystemController.h  LSystemView.cpp  LSystemView.h  Makefile  Observable.cpp  Observable.h  Observer.h  README.org  RenderWindow.h  RuleBuffer.h  RuleBuffer.tpp  RuleMap.h  RuleMap.tpp  RuleMapBuffer.h  RuleMapBuffer.tpp  Turtle.cpp  Turtle.h  WindowController.cpp  WindowController.h  a  color.cpp  color.h  colors.cpp  colors.h  (+23 more)
config/: config.json
execution-time/: O0.txt
gsl/: gsl  gsl_util  multi_span  span  string_span
imgui/: imconfig.h  imgui-SFML.cpp  imgui_widgets.cpp
includes/: #RuleMapBuffer.tpp#  .#RuleMapBuffer.tpp  ColorsGenerator.h  ColorsGeneratorBuffer.h  ColorsGeneratorSerializer.h  ColorsGeneratorWrapper.h  DrawingParameters.h  ExportMenu.h  Indicator.h  InterpretationMap.h  InterpretationMapBuffer.h  LSystem.h  LSystemBuffer.h  LSystemController.h  LSystemView.h  LoadMenu.h  NewRuleMapBuffer.h  NewRuleMapBuffer.tpp  Observable.h  Observer.h  PolymorphicSerializer.h  PopupGUI.h  RenderWindow.h  RuleMap.h  RuleMap.tpp  RuleMapBuffer.h  RuleMapBuffer.tpp  SaveMenu.h  SupplementaryRendering.h  SupplmentaryRendering.h  Turtle.h  UniqueColor.h  UniqueId.h  VertexPainter.h  VertexPainterBlockRandom.h  VertexPainterBuffer.h  VertexPainterComposite.h  VertexPainterConstant.h  VertexPainterIteration.h  VertexPainterLinear.h  (+22 more)
optimization/: README.org
saves/: binary_tree.lsys  fern.lsys  serpinksi.lsys  serpinski.lsys  true
src/: ColorsGenerator.cpp  ColorsGeneratorBuffer.cpp  ColorsGeneratorSerializer.cpp  ColorsGeneratorWrapper.cpp  DrawingParameters.cpp  ExportMenu.cpp  Indicator.cpp  InterpretationMap.cpp  LSystem.cpp  LSystemController.cpp  LSystemView.cpp  LoadMenu.cpp  Observable.cpp  PolymorphicSerializer.cpp  PopupGUI.cpp  SaveMenu.cpp  (+29 more)
(+29 files in other folders)
